--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html> 
 <head>
-  <title>MicroBlog</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+<title>Ruby on Rails Tutorial Micro Blog | <%= @title %></title>
+<%= csrf_meta_tag %> 
 </head>
-<body>
-
+<body> 
 <%= yield %>
-
-</body>
+</body> 
 </html>
