--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h1>Micro Blog</h1> 
 <p>
-This is the contact page for the 
+This is the about page for the 
 <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> micro blog.
 </p> 
