--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,4 @@
 This is the home page for the 
 <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> Micro Blog.
 </p> 
+<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
